--- a/prepros.config
+++ b/prepros.config
@@ -933,6 +933,12 @@
         }
       },
       {
+        "file": "scss/reset.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "scss/variables.scss",
         "config": {
           "autoCompile": false
