--- a/prepros.config
+++ b/prepros.config
@@ -927,6 +927,16 @@
     },
     "files": [
       {
+        "file": "css/style.css",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
         "file": "scss/mixin.scss",
         "config": {
           "autoCompile": false
@@ -936,6 +946,16 @@
         "file": "scss/reset.scss",
         "config": {
           "autoCompile": false
+        }
+      },
+      {
+        "file": "scss/style.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          }
         }
       },
       {
